feat: Gen receipt if not exits